--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "lightbox2": "^2.10.0",
     "ngx-bootstrap": "^3.2.0",
+    "ngx-lightbox": "^1.2.0",
     "ngx-masonry": "^1.1.2",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
